# ai-overwatcher

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
docs/: adhd-wedge.md  architecture.md  behavior-science.md  evaluation.md  feedback-cycles.md  google-service-account-setup.md  llm-abstraction-and-flows.md  llm-chains.md  mvp.md  session-reflection.md  technical-implementation.md  technical-review.md
scripts/: bench_llm_latency.py  probe_llm.py
src/overwatcher/: classifier.py  config.py  db.py  errors.py  handlers.py  llm.py  llm_calls.py  logging_setup.py  main.py  models.py  pending.py  prompts_loader.py  quiet.py  repo.py  scheduler.py  schemas.py  sheets.py  sms.py  timers.py
src/overwatcher/jobs/: evening.py  heartbeat.py  morning.py  timer_check.py  weekly.py
src/overwatcher/prompts/: classifier.md  evening_followup.md  morning_pushback.md  timer_parser.md  warm_ack.md  weekly_summary.md
src/overwatcher/routes/: sms.py
tests/: conftest.py  test_classifier.py  test_config.py  test_handlers.py  test_inbound_pipeline.py  test_phase4.py  test_smoke.py  test_timers.py
