[project]
name = "overwatcher"
version = "0.1.0"
description = "SMS accountability agent for one person."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "apscheduler>=3.10,<4",
    "twilio",
    "litellm",
    "instructor",
    "gspread",
    "google-auth",
    "python-multipart",
    "httpx",
    "python-json-logger",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    #"ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overwatcher"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
